--- a/note/2022年第26周--ARTS挑战第2周.md
+++ b/note/2022年第26周--ARTS挑战第2周.md
@@ -1,8 +1,9 @@
 **Algorithm：每周至少做一个 leetcode 的算法题**
 
 [383. 赎金信](https://leetcode.cn/problems/ransom-note/)
-考察char类型的知识点，我的题解用byte和String呼转，然后遍历逐一replace掉，虽然实现功能了，但被官方题解降维打击了
-增加对char类型的知识点熟悉
+考察char类型的知识点，我的题解用byte和String呼转，然后遍历逐一replace掉，虽然实现功能了，但被官方题解降维打击了。
+
+需要增加对char类型的知识点熟悉
 
 [412. Fizz Buzz](https://leetcode.cn/problems/fizz-buzz/)
 
