--- a/note/2022年第26周--ARTS挑战第2周.md
+++ b/note/2022年第26周--ARTS挑战第2周.md
@@ -1,6 +1,7 @@
 **Algorithm：每周至少做一个 leetcode 的算法题**
 
 [383. 赎金信](https://leetcode.cn/problems/ransom-note/)
+
 考察char类型的知识点，我的题解用byte和String呼转，然后遍历逐一replace掉，虽然实现功能了，但被官方题解降维打击了。
 
 需要增加对char类型的知识点熟悉
@@ -17,3 +18,36 @@
 
 
 **Share：分享一篇有观点和思考的技术文章**
+
+[Restful 是什么？？](https://mp.weixin.qq.com/s/oJkNOwWzVH3VtsDHL9WMNw)
+
+REST是一种软件架构风格，中文翻译为“表述性状态移交”；
+   
+   原则：
+   
+      网络上所有的事物都被抽象为资源
+      
+      每个资源都有一个唯一的资源标识符
+      
+      同一个资源具有多重表现形式（xml、json等）
+      
+      对资源的各种操作不会改变资源的标识符
+      
+      所有操作都是无状态的
+      
+
+RESTful是满足了REST架构风格的Api；
+
+    设计规范
+        不能有动词（遵循二八原则）
+        
+    URI 作为统一资源标识符
+    
+    面向资源：聚合、虚拟资源
+    
+    状态码：可以直接使用HTTP状态码
+    
+    版本号
+    
+    成熟度模型
+     
