--- a/note/2022年第26周--ARTS挑战第2周.md
+++ b/note/2022年第26周--ARTS挑战第2周.md
@@ -17,6 +17,7 @@
 
 [Linux系统命令：PS](https://segmentfault.com/a/1190000042035135)
 
+[tips：Java开发中常用的默认端口--持续整理](https://segmentfault.com/u/tianl/articles)
 
 **Share：分享一篇有观点和思考的技术文章**
 
