--- a/note/2022年第26周--ARTS挑战第2周.md
+++ b/note/2022年第26周--ARTS挑战第2周.md
@@ -10,7 +10,23 @@
 
 可能题是真简单，但的确带来一丢丢信心，一次提交通过，主要是考察取余操作
 
+
+
 **Review：阅读并点评至少一篇英文技术文章**
+
+[What is JDBC? Introduction to Java Database Connectivity](https://www.infoworld.com/article/3388036/what-is-jdbc-introduction-to-java-database-connectivity.html)
+
+通过该篇文章重温了如何通过JDBC访问数据。
+
+文章介绍JDBC是如何工作的，简单的数据连接和查询，预处理语句、批量更新、事务，JDBC连接池、结论共五个章节。
+
+使用了sqlite这个方便快捷的数据库,后续可以继续关注下sqlite。
+
+感悟与收获：
+1、JDBC其实是分了两块内容：JDBC API和JDBC Driver，JDBC API支持了应用程序与JDBC管理器之间的通信，而JDBC Driver支持了JDBC管理器与数据库驱动程序之间的通信。
+2、JDBC驱动程序有4种类型，分别为：JDBC-ODBC Bridge驱动程序、Native-API 驱动程序（部分是java驱动程序）、网络协议驱动（完全java驱动）、本地协议驱动（完全java驱动程序）
+> https://www.yisu.com/zixun/136151.html
+
 
 
 **Tip：学习至少一个技术技巧**
@@ -18,6 +34,9 @@
 [Linux系统命令：PS](https://segmentfault.com/a/1190000042035135)
 
 [tips：Java开发中常用的默认端口--持续整理](https://segmentfault.com/u/tianl/articles)
+
+
+
 
 **Share：分享一篇有观点和思考的技术文章**
 
