feat:2022年第26周--ARTS挑战第2周：增加配图。

--- a/note/2022年第26周--ARTS挑战第2周.md
+++ b/note/2022年第26周--ARTS挑战第2周.md
@@ -22,6 +22,11 @@
 
 使用了sqlite这个方便快捷的数据库,后续可以继续关注下sqlite。
 
+![JDBC connects Java programs to databases.](https://images.idgesg.net/images/article/2022/05/what-is-jdbc-fig1-100927559-large.jpg)
+
+
+![JDBC’s architecture consists of the JDBC API and JDBC drivers.](https://images.idgesg.net/images/article/2022/05/what-is-jdbc-fig2-100927560-large.jpg)
+
 感悟与收获：
 1、JDBC其实是分了两块内容：JDBC API和JDBC Driver，JDBC API支持了应用程序与JDBC管理器之间的通信，而JDBC Driver支持了JDBC管理器与数据库驱动程序之间的通信。
 2、JDBC驱动程序有4种类型，分别为：JDBC-ODBC Bridge驱动程序、Native-API 驱动程序（部分是java驱动程序）、网络协议驱动（完全java驱动）、本地协议驱动（完全java驱动程序）
