feat:2022年第27周--ARTS挑战第3周

--- a/note/2022年第27周--ARTS挑战第3周.md
+++ b/note/2022年第27周--ARTS挑战第3周.md
@@ -18,6 +18,21 @@
 
 **Review：阅读并点评至少一篇英文技术文章**
 
+[What is JPA? Introduction to the Jakarta Persistence API](https://www.infoworld.com/article/3379043/what-is-jpa-introduction-to-the-java-persistence-api.html)
+
+![ JPA and the Java ORM layer](https://images.idgesg.net/images/article/2022/05/what-is-jpa.drawio-1-100928128-orig.jpg)
+
+如上图所示，JPA其实是代码与JDBC之前的一个适配层。
+
+JPA是ORM的一个规范及框架标准，ORM面向对象，不推荐写sql，但提供hql。Hibernate、EclipseLink是它的实现；Spring Data JPA是对JPA规范的再次封装抽象，个人理解也是对JPA的实现；
+
+而MyBatis是sql mapping框架而不是ORM框架，起码是一个不完整的ORM框架，因为MyBatis只实现了关系 --> 对象之间的映射，他想要操作数据库还是得用sql。
+
+优缺点：面向对象移植性好、但不够灵活；写sql灵活、可以sql调优。
+
+>引用
+> https://www.csdn.net/tags/MtTaAgzsMzAzMDMxLWJsb2cO0O0O.html
+
 
 **Tip：学习至少一个技术技巧**
 
