feat:2022年第28周--ARTS挑战第4周

--- a/note/2022年第28周--ARTS挑战第4周.md
+++ b/note/2022年第28周--ARTS挑战第4周.md
@@ -1,1 +1,37 @@
 
+**Algorithm：每周至少做一个 leetcode 的算法题**
+
+[26. 删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/)
+
+看清楚题目要求很重要，题目要求返回长度，且不适用额外的空间。
+两周前的解答非得使用额外的集合类型，三次提交失败；
+此外，数组类的遍历用单指针、双指针（快慢）反复玩花样，是一个方向性的思路。
+
+[21. 合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/)
+
+表示看了题解中的方法二，迭代方法
+然而并没有看懂改变prev怎么就改变了ListNode
+下周继续看
+
+**Review：阅读并点评至少一篇英文技术文章**
+
+
+
+**Tip：学习至少一个技术技巧**
+
+
+
+**Share：分享一篇有观点和思考的技术文章**
+
+
+[深入浅出设计优先的 API 开发方法](https://www.infoq.cn/article/YWvzOsjao1E7UDo1fBoH) 
+
+作者描述了最常见的践行 API 策略的方法有代码优先、API 优先和设计优先。
+
+美好世界是设计优先，努力方向是api优先，事实上大多数时候都是代码优先，因为要着急交付工作。
+
+慢慢改变，世界总会变得更好一点。
+
+> [API设计指导](https://stoplight.io/api-design-guide) 
+> [什么是 openAPI ?](https://blog.csdn.net/weixin_36836847/article/details/95206329) 
+> [深入浅出设计优先的 API 开发方法 原文](https://blog.stoplight.io/the-wrong-way-to-api-what-happens-when-you-dont-follow-a-design-first-approach)
