feat:2022年第28周--ARTS挑战第4周

--- a/note/2022年第28周--ARTS挑战第4周.md
+++ b/note/2022年第28周--ARTS挑战第4周.md
@@ -15,11 +15,19 @@
 
 **Review：阅读并点评至少一篇英文技术文章**
 
+[5 tips for writing better API documentation](https://www.infoworld.com/article/3664096/5-tips-for-writing-better-api-documentation.html)
 
+同一天的时间里现在infoq上看到Steve Rodda的关于api的文章《深入浅出设计优先的 API 开发方法》。
+接着又在infoworld上读到：
+1、力求一致性；
+2、使用简单的语言和友好的语气；
+3、为非技术人员提供基本信息；
+4、采用设计优先的方法；
+5、利用多媒体创作。
 
 **Tip：学习至少一个技术技巧**
 
-
+[MySQL：强制索引force index与using filesort](https://segmentfault.com/a/1190000042092610)
 
 **Share：分享一篇有观点和思考的技术文章**
 
