feat:2022年第29周--ARTS挑战第5周

--- a/note/2022年第29周--ARTS挑战第5周.md
+++ b/note/2022年第29周--ARTS挑战第5周.md
@@ -45,3 +45,7 @@
 
 
 **Share：分享一篇有观点和思考的技术文章**
+
+[“一把梭：REST API 全用 POST”](https://coolshell.cn/articles/22173.html)
+
+这是一片用来吵架的文章，值得收藏，推崇流行规范总归是没错的，因为只有最佳实践才能成为真正的流行规范。
