--- a/note/2022年第29周--ARTS挑战第5周.md
+++ b/note/2022年第29周--ARTS挑战第5周.md
@@ -1,5 +1,14 @@
 **Algorithm：每周至少做一个 leetcode 的算法题**
 
+[2236. 判断根结点是否等于子结点之和](https://leetcode.cn/problems/root-equals-sum-of-children/)
+
+这题有点简单的不可置信。
+
+[215. 数组中的第K个最大元素](https://leetcode.cn/problems/kth-largest-element-in-an-array/)
+
+该题考查排序算法，先排序，再取第k个元素。
+
+
 
 **Review：阅读并点评至少一篇英文技术文章**
 
@@ -43,6 +52,13 @@
 
 **Tip：学习至少一个技术技巧**
 
+[快速排序](https://segmentfault.com/a/1190000042183226)
+
+快排，设置了基准点，然后用了双指针通过跟基准点相比，来反复交换大小数字的位置，小的放在基准点的左侧，大的放在基准点的右侧；
+
+直至左右指针重合后，将基准点和重合位置交换，从而进行了一轮排序；
+
+然后通过递归排序左右两侧的子序列。
 
 **Share：分享一篇有观点和思考的技术文章**
 
